# csvreader

./: .gitignore  CMakeLists.txt  Readme.md
include/: csv_parser.h  evaluator.h  table.h
src/: CMakeLists.txt  csv_parser.cpp  evaluator.cpp  main.cpp  table.cpp
tests/: CMakeLists.txt  evaluator_test.cpp  table_test.cpp  test2.csv  test3_cycle.csv  test4_error_arg1.csv  test_csv_parser.cpp
